--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
     "version": "2.0.0"
   },
   "adminBot": [
-    "YOUR_PHONE_NUMBER@c.us"
+    "219494303703244@s.whatsapp.net" // note that have add uids separatelty for gcs and inboxs . Soon i will fix it!!
   ],
   "adminOnly": false,
   "whiteListMode": {
@@ -23,8 +23,8 @@
     "whiteListedGroups": []
   },
   "database": {
-    "type": "json",
-    "path": "./data/database.json",
+    "type": "mongodb",
+    "path": "mongodb+srv://leox5622:JDaiiPRmtc4vJ9fC@cluster0.kvoyfpk.mongodb.net/GoatBotV2?retryWrites=true&w=majority&appName=Cluster0",
     "autoSync": true
   },
   "dashBoard": {
